# Verilog-example

./: README.md
include/: include.svh  macro.svh
src/: sdpram.sv  spram.sv
tb/tb_example/: tb_sdpram.sv
tb/tb_src/: tb_spram.sv  tb_top.sv
tb/verilator/cmake/: CMakeLists.txt  Makefile
tb/verilator/make/: Makefile
